Added Async to Goodbyes Endpoint